some layout issues fixed

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -6,7 +6,7 @@
   gap: 0px;
   opacity: 0px;
   background-image: url("/assets/sideImg.png");
-  background-size: 40vw 100vh;
+  background-size: 40vw 100%;
   background-repeat: no-repeat;
   position: relative;
 }
@@ -93,7 +93,7 @@ color: #FFFFFF;
   /* border: 2px solid red; */
   width: 79vw;
   height: 100vh;
-  padding-right: 80px;
+  margin-inline: 4rem;
 }
 .btn-black {
   width: 139.92px;
